# ayaya

./: .envrc.example  .gitignore  .ignore  Cargo.toml  DESIGN.md  README.md  flake.nix  rust-toolchain.toml
ayaya/: Cargo.toml  build.rs
ayaya-backend/: Cargo.toml  README.md  tailwind.config.js
ayaya-backend/src/: app.rs  data_provider.rs  database.rs  fileserv.rs  main.rs
ayaya-collector/: Cargo.toml  build.rs
ayaya-collector/proto/: ayaya.proto  ayaya_collection.proto
ayaya-collector/src/: grpc.rs  main.rs
ayaya-common/: Cargo.toml
ayaya-common/src/: lib.rs
ayaya-ebpf/: Cargo.toml
ayaya-ebpf/src/: main.rs  vmlinux.rs
ayaya/src/: event_proxy.rs  main.rs
migrations/: 20250122115135_initial_migration.down.sql  20250122115135_initial_migration.up.sql
nix/: cargo-leptos.nix
