[package]
name = "ayaya-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tonic = "0.12.3"
anyhow = { workspace = true, default-features = true }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "derive", "migrate", "time", "uuid" ] }
time = { version = "0.3.37", features = ["formatting", "macros"] }

[build-dependencies]
tonic-build = "*"

[lib]
path = "src/grpc.rs"
